@@ -17,7 +17,7 @@ return
 
 % TODO alternative: inverse purification
 s = state(0, [n, k]); % rank k state op
-s = u_propagate(s, rand_U(n*k)); % expensive and wasteful...
+s = s.prop(rand_U(n*k)); % expensive and wasteful...
 s = ptrace(s, 2);
 A = s.data;
 end
